[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trajectoryvis"
version = "0.0.1"
authors = [
  { name="Kyle Kam", email="kamkyl196@gmail.com" },
]
description = "Toolbox to visualize trajectories"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kylekam/trajectoryvis"
Issues = "https://github.com/kylekam/trajectoryvis/issues"